# lab-ui

./: .gitignore  Cargo.toml  FIGMA_AUDIT.md  PITCH.md  PLAN.md  README.md  analyze-chroma.mjs  analyze-curve.mjs  analyze-gamut.mjs  analyze-hsb.mjs  compare-all.mjs  compare-models.mjs  config.yaml  grid-search.mjs  hsb-interp.mjs  optimize-easing.mjs  optimize-easing2.mjs  optimize-easing3.mjs  optimize-easing4.mjs  package-lock.json  package.json  preview-cam16-hue.html  preview-cam16-ucs-hue.html  preview-cam16-ucs.html  preview-cam16.html  preview-fast-rise.html  preview-hct.html  preview-hsv.html  preview-jzazbz.html  test-cam16-hue.mjs  test-cam16-ucs-hue.mjs  test-cam16-ucs.mjs  test-cam16.mjs  test-cleaned.mjs  test-fastrise.mjs  test-hct.mjs  test-hsv-ease.mjs  test-jzazbz-v2.mjs  test-jzazbz.mjs  test-powerbell.mjs  (+3 more)
crates/labui-cli/: Cargo.toml
crates/labui-cli/preview/: index.html
crates/labui-cli/src/: main.rs  preview_server.rs  tests.rs
crates/labui-core/: Cargo.toml
crates/labui-core/src/: accent.rs  apca.rs  cam16_ucs.rs  lib.rs  neutral.rs  spaces.rs  srgb.rs  tint.rs
crates/labui-core/src/color/: cam16.rs  cat16.rs  mod.rs  ucs.rs  viewing_conditions.rs
crates/labui-wasm/: Cargo.toml
crates/labui-wasm/src/: lib.rs
schemas/: tokens.schema.json
src/primitives/: neutral.ts
