[package]
name = "labui-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "labui"
path = "src/main.rs"

[dependencies]
labui-core = { path = "../labui-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tiny_http = "0.12"
